--- a/Näyttöpaja projekti/index.html
+++ b/Näyttöpaja projekti/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>Page Title</title>
+    <title>Etusivu</title>
 </head>
 <body>
 
-<H1>Testi</H1>
+<H1>testi 2</H1>
 
 </body>
 </html>
