--- a/Näyttöpaja projekti/index.html
+++ b/Näyttöpaja projekti/index.html
@@ -5,8 +5,16 @@
     <title>Etusivu</title>
 </head>
 <body>
-
-<H1>testi 2</H1>
-
+    <div class="runko">
+        <div class="laatikko">
+            <div class="nav-bar">
+                <ul>
+                    <li><a href="#Etusivu">Home</a></li>
+                    <li><a href="#Minusta">About me</a></li>
+                    <li><a href="#Tyohistoria">Experience</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
