--- a/Näyttöpaja projekti/index.html
+++ b/Näyttöpaja projekti/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>Etusivu</title>
+    <title>Matti's website</title>
 </head>
 <body>
     <div class="runko">
@@ -13,6 +13,18 @@
                     <li><a href="#Minusta">About me</a></li>
                     <li><a href="#Tyohistoria">Experience</a></li>
                 </ul>
+
+                <div class="sisempi-laatikko">
+                    <h1>Matti's website</h1>
+                    <h2>Welcome to Matti's website!</h2>
+                    <p>
+                        Hey! My name is Matti and this is my very own website. 
+                        Here you can find information about me, my hobbies, past work experiences and education. 
+                        You can use the navigation bar to pick a topic you want to read about.
+                    </p>
+                    <h3>Fun Fact</h3>
+                    <p>I actually didn't make this website myself, it was made by three students.</p>
+                </div>
             </div>
         </div>
     </div>
