--- a/Näyttöpaja projekti/index.html
+++ b/Näyttöpaja projekti/index.html
@@ -11,6 +11,7 @@
                 <ul>
                     <li><a href="#Etusivu">Home</a></li>
                     <li><a href="#Minusta">About me</a></li>
+                    <li><a href="#Hobbies">Hobbies</a></li>
                     <li><a href="#Tyohistoria">Experience</a></li>
                 </ul>
 
@@ -32,8 +33,8 @@
 
                     <div class="lomake">
                         <form class="lomake">
-                            <h1>Feedback</h1>
-                            <input class="email" type="email" pattern="[^ @]*@[^ @]*" placeholder="Enter your Email">
+                            <h1 class="feedback-text">Feedback</h1>
+                            <input class="email" type="email" pattern="[^ @]*@[^ @]*" placeholder="Enter your Email" required>
                             <br>
                             <label>Thoughts on the website?</label>
                             <section class="rating">
@@ -45,10 +46,8 @@
                             </section>
                             <br>
                             <section class="extra-comment">
-                                <label for="extra">Something you want to comment?</label>
-                                <br>
                                 <textarea class="extra-comment-box" id="extra" name="extra" rows="5" cols="30" placeholder="Enter your feedback here"></textarea>
-                              </section>
+                            </section>
                             <br>
                             <input class="submit" type="submit" value="Submit" placeholder="Submit">
                         </form>
