--- a/Näyttöpaja projekti/index.html
+++ b/Näyttöpaja projekti/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
+    <link href="JavaScript.js">
     <title>Matti's website</title>
 </head>
 <body>
@@ -49,7 +50,7 @@
                                 <textarea class="extra-comment-box" id="extra" name="extra" rows="5" cols="30" placeholder="Enter your feedback here"></textarea>
                             </section>
                             <br>
-                            <input class="submit" type="submit" value="Submit" placeholder="Submit">
+                            <input class="submit" type="submit" value="Submit" id="Submit" placeholder="Submit">
                         </form>
                     </div>
                 </div>
