CV style, about me style and content improvements

--- a/Näyttöpaja projekti/about me.html
+++ b/Näyttöpaja projekti/about me.html
@@ -2,27 +2,35 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-</head>
-    <title>ABOUT ME</title>
-
+    <link rel="stylesheet" href="about me style.css">
+    <title>About me</title>
+  </head>
   <body>
-    <h1>About me<h1>
-
-    <div class="one">
-
-      - I am Matti 35 years old I done my programming studies in Keuda Kerava. My studies lasted for three years.
-      <br>
-      <br>
-      - Currently i am freelancer working on diffrent projects. Also i am studying diffrent sections as cybersecurity and IT support.
-      <br>
-      <br>
-      - My goal by the end of 2023 to achive gradutaion and start doing the nect level of the studies.
-      <br>
-      <br>
-      - I have 3 yaers old germanshaperd he like watching me when i do my work tasks.
+    <div class="runko">
+      <div class="laatikko">
+        <div class="nav-bar">
+          <ul>
+            <li><a href="#Etusivu">Home</a></li>
+            <li><a href="#Minusta">About me</a></li>
+            <li><a href="#Tyohistoria">Experience</a></li>
+          </ul>
+        </div>
+        <div class="sisempi-laatikko">
+          <h1>About me</h1>
+          <hr>
+          <div class="teksti">
+          <p>
+            My name is Matti, I'm a 35 year old man. I did my programming studies in Keuda Kerava. My studies lasted for three years.
+            <br>
+            Currently I am a freelancer working on different projects. I am also currently studying cybersecurity and IT support.
+            <br>
+            My goal is to to achive graduation by the end of 2023 and start doing the next level of my studies.
+            <br>
+            I have 3 year old German Shepherd and he likes watching me do my work tasks.
+          </p>
+          </div>
+        </div>
+      </div>
     </div>
-
-
   </body>
 </html>
