--- a/Näyttöpaja projekti/cv Matti.html
+++ b/Näyttöpaja projekti/cv Matti.html
@@ -2,53 +2,48 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="CV style.css">
     <title>CV</title>
     </head>
-    <body>
-    <h1>Curriculum Vitae</h1>
-
-    <p>
-      Basic information and contact detalis:<br><br>
-      Name:           Matti Toivonen <br>
-      Date of birth:  1.1.2000 <br>
-      Nationallity:   Finnish <br>
-      Phone number:   +358xxxxx <br>
-      Email:          xxxxx@gmail.com
-      <br>
-      <br>
-
-
-      Educational background:<br>
-      vocational school:    Keuda 2020-<br>
-      Programming course:   2021<br>
-      cybersecurity course: 2022<br>
-      <br>
-      Work experience: <br>
-      Digital center:     2015-2017<br>
-      House keeper:       2017-2019<br>
-      Food delivery:      2019-2020<br>
-      <br>
-
-      Tecnical skills:<br>
-      Microsoft office<br>
-      Internet explorer<br>
-      porgramming languges : HTML      CSS     Javascript<br>
-      <br>
-
-
-      Hobbies:<br>
-      Tennis          Basketball        Videogames<br>
-      Photography     Yoga              Vlogging<br>
-      <br>
-
-
-
-
-
-
-
-
-    </p>
-
+  <body>
+    <div class="runko">
+      <div class="laatikko">
+        <div class="nav-bar">
+          <ul>
+            <li><a href="#Etusivu">Home</a></li>
+            <li><a href="#Minusta">About me</a></li>
+            <li><a href="#Tyohistoria">Experience</a></li>
+          </ul>
+        </div>
+        <div class="sisempi-laatikko">
+          <h1>Curriculum Vitae</h1>
+          <hr>
+          <p>
+            Basic information and contact details:<br><br>
+            Name:           Matti Toivonen <br>
+            Date of birth:  1.1.1987 <br>
+            Nationallity:   Finnish <br>
+            Phone number:   +358 123456789 <br>
+            Email:          matti.toivonen@gmail.com
+            <br>
+            <br>
+            Educational background:<br>
+            Vocational school:    Keuda 2020-<br>
+            Programming course:   2021<br>
+            Cybersecurity course: 2022<br>
+            <br>
+            Work experience: <br>
+            Digital center:     2015-2017<br>
+            House keeper:       2017-2019<br>
+            Food delivery:      2019-2020<br>
+            <br>
+            Tecnical skills:<br>
+            Microsoft office<br>
+            Internet explorer<br>
+            Programming languges : HTML, CSS, Javascript<br>
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
