--- a/about_me.html
+++ b/about_me.html
@@ -10,9 +10,10 @@
       <div class="laatikko">
         <div class="nav-bar">
           <ul>
-            <li><a href="#Etusivu">Home</a></li>
-            <li><a href="#Minusta">About me</a></li>
-            <li><a href="#Tyohistoria">Experience</a></li>
+            <li><a href="https://vetsuy.github.io/nayttopaja.github.io/">Home</a></li>
+            <li><a href="https://vetsuy.github.io/nayttopaja.github.io/about_me">About me</a></li>
+            <li><a href="https://vetsuy.github.io/nayttopaja.github.io/Hobbies">Hobbies</a></li>
+            <li><a href="https://vetsuy.github.io/nayttopaja.github.io/cv_Matti">Experience</a></li>
           </ul>
         </div>
         <div class="sisempi-laatikko">
