--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <link href="JavaScript.js">
+    <script type="text/javascript"src="Javascript.js"></script>
     <title>Matti's website</title>
 </head>
 <body>
@@ -50,7 +50,7 @@
                                 <textarea class="extra-comment-box" id="extra" name="extra" rows="5" cols="30" placeholder="Enter your feedback here"></textarea>
                             </section>
                             <br>
-                            <input class="submit" type="submit" value="Submit" id="Submit" placeholder="Submit">
+                            <input type="button" value="Submit" id="submit" name="button" onclick="main();">
                         </form>
                     </div>
                 </div>
