--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="lomake">
                         <form class="lomake">
                             <h1 class="feedback-text">Feedback</h1>
-                            <input class="email" type="email" pattern="[^ @]*@[^ @]*" placeholder="Enter your Email" required>
+                            <input class="email" type="email" pattern="[^ @]*@[^ @]*" placeholder="Enter your Email" id="email" required>
                             <br>
                             <label>Thoughts on the website?</label>
                             <section class="rating">
