--- a/Hobbies.html
+++ b/Hobbies.html
@@ -2,28 +2,52 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="Hobbies-style.css">
     <title>Hobbies</title>
-    </head>
-    <body>
-    <h1>Hobbies</h1>
-
-        <h3>Tennis:</h3>The Tennis is one of my favourite summer sports I usually play Tennis in the open areas from June untill August <br><br>
-
-        <h3>Basketball:</h3>
-        I start playing basketball since I was 15 yeas old in the school where i learn it,
-        and it starts to give me motivation to use my kept power for the week to spend it in the weekind while playing this game<br><br>
-
-        <h3>Videogames:</h3> It is the free time when the weather is not too good for playing outside usually.<br>
-        I gather my friends on online server and tart playing for a couple of yours.    <br><br>
-
-        <h3>Photography:</h3> WHen it either Snowy or Shinny it is the best time to practice my Photographin hobbie with my camera <br>
-        streetphotographing is one of my favorite mod for taking the pictures.<br><br>
-
-        <h3>Yoga: </h3>Yoga is the best solution for relaxing and freeing my mind when there is many tasks to do.<br><br>
-
-        <h3>Vlogging:</h3> shooting daily events if i have free time is one of the nice activities to do.<br><br>
-        For example sharing the cultural event on socialmedia is beniftil to send the finnish image out.<br><br>
-
-
+  </head>
+  <body>
+    <div class="runko">
+      <div class="laatikko">
+        <div class="nav-bar">
+          <ul>
+            <li><a href="#Etusivu">Home</a></li>
+            <li><a href="#Minusta">About me</a></li>
+            <li><a href="#Tyohistoria">Experience</a></li>
+          </ul>
+        </div>
+        <div class="sisempi-laatikko">
+          <h1>Hobbies</h1>
+          <hr>
+          <h3>Tennis</h3>
+          <p>
+            Tennis is one of my favourite summer sports, I usually play tennis in open areas from June until August.
+          </p>
+          <h3>Basketball</h3>
+          <p>
+            I started playing basketball when I was 15 years old in the school where i learned it, 
+            and I'm still very motivated about it. I often play basketball during the weekend.
+          </p>
+          <h3>Videogames</h3>
+          <p>
+            When the weather is not too good for outdoor activities,
+            I gather my friends online and start playing for a couple of hours.
+          </p>
+          <h3>Photography</h3>
+          <p>
+            When It's either Snowy or Sunny it is the best time to practice my photography hobbies with my camera.
+            Street photography is one of my favorite types of photography.
+          </p>
+          <h3>Yoga</h3>
+          <p>
+            Yoga is the best solution for relaxing and freeing my mind when there is many tasks to do.
+          </p>
+          <h3>Vlogging</h3>
+          <p>
+            Shooting daily vlogs if i have free time is one of the nice activities to do.
+            For example sharing the cultural events on social media is benificial to spreading and sharing the finnish culture out.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
