--- a/about_me.html
+++ b/about_me.html
@@ -10,9 +10,10 @@
       <div class="laatikko">
         <div class="nav-bar">
           <ul>
-            <li><a href="#Etusivu">Home</a></li>
-            <li><a href="#Minusta">About me</a></li>
-            <li><a href="#Tyohistoria">Experience</a></li>
+            <li><a href="Matti's website">Home</a></li>
+            <li><a href="About me">About me</a></li>
+            <li><a href="Hobbies">Hobbies</a></li>
+            <li><a href="CV">Experience</a></li>
           </ul>
         </div>
         <div class="sisempi-laatikko">
